burn down all warnings